--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-datetime-picker": "^2.7.1",
     "react-dom": "^16.8.6",
     "react-multi-carousel": "^2.4.0",
+    "react-notifications": "^1.4.3",
     "react-router-dom": "^5.0.1",
     "react-scripts": "0.9.5",
     "styled-components": "^4.4.1",
