--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "firebase": "^7.4.0",
+    "jwt-decode": "^2.2.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.10",
     "react-calendar": "^2.19.1",
@@ -16,6 +17,7 @@
     "react-dom": "^16.8.6",
     "react-multi-carousel": "^2.4.0",
     "react-notifications": "^1.4.3",
+    "react-password-strength": "^2.4.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "0.9.5",
     "styled-components": "^4.4.1",
