--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-password-strength": "^2.4.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "0.9.5",
+    "react-tooltip": "^3.11.1",
     "styled-components": "^4.4.1",
     "tailwind-react-ui": "^0.8.1",
     "uuid": "^3.3.3",
