--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "enzyme": "^3.11.0",
     "firebase": "^7.4.0",
     "jwt-decode": "^2.2.0",
     "react": "^16.8.6",
@@ -30,6 +31,7 @@
     "autoprefixer": "^9.6.1",
     "babel-jest": "^24.9.0",
     "faker": "^4.1.0",
+    "firebase-mock": "^2.3.2",
     "jest": "^24.9.0",
     "jest-cli": "^24.9.0",
     "postcss-cli": "^6.1.3",
