--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-date-picker": "^7.9.0",
     "react-datetime-picker": "^2.7.1",
     "react-dom": "^16.8.6",
+    "react-lines-ellipsis": "^0.14.1",
     "react-multi-carousel": "^2.4.0",
     "react-notifications": "^1.4.3",
     "react-password-strength": "^2.4.0",
