--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "enzyme": "^3.11.0",
     "firebase": "^7.4.0",
     "jwt-decode": "^2.2.0",
+    "phone": "^2.4.9",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.10",
     "react-calendar": "^2.19.1",
