--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "array-sort": "^1.0.0",
     "axios": "^0.19.0",
     "enzyme": "^3.11.0",
     "firebase": "^7.4.0",
@@ -21,6 +22,7 @@
     "react-lines-ellipsis": "^0.14.1",
     "react-multi-carousel": "^2.4.0",
     "react-notifications": "^1.4.3",
+    "react-paginate": "^6.3.2",
     "react-password-strength": "^2.4.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "0.9.5",
