--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "with-router": "^1.0.1"
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^2.1.2",
     "autoprefixer": "^9.6.1",
     "babel-jest": "^24.9.0",
     "faker": "^4.1.0",
@@ -42,15 +43,17 @@
     "postcss-cli": "^6.1.3",
     "postcss-easy-import": "^3.0.0",
     "puppeteer": "^2.0.0",
+    "purgecss": "^2.1.2",
     "regenerator-runtime": "^0.13.3",
-    "tailwindcss": "^1.0.5"
+    "tailwindcss": "^1.4.4"
   },
   "scripts": {
     "test": "jest",
-    "build:css": "postcss src/assets/css/main.css -o src/index.css",
-    "watch:css": "postcss src/assets/css/main.css -o src/index.css -w",
+    "build:css": "postcss src/assets/css/tailwind.css -o src/index.css --env production",
+    "start:css": "tailwind build src/assets/css/tailwind.css -o src/index.css",
+    "watch:css": "postcss src/assets/css/tailwind.css -o src/index.css -w",
     "start": "react-scripts start",
-    "build": " react-scripts build",
+    "build": "npm run build:css && react-scripts build",
     "eject": "react-scripts eject"
   }
 }
